@@ -17,6 +17,7 @@ sbotools
     * Thanks to Slack Coder for the suggestion.
   * sboinstall: Do not attempt compat32 builds for noarch
   * Build.pm: Remove unnecessary ARCH modification
+  * Util.pm: Add rationalize_queue for automatic reverse dependency rebuilds
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
